# ezytutors7

./: Cargo.toml  README.md
tutor-nodb/: Cargo.toml
tutor-nodb/src/: state.rs
tutor-web-app-ssr/src/iter6/: model.rs  routes.rs
tutor-web-app-ssr/src/iter6/handler/: auth.rs  course.rs
tutor-web-app-ssr/static/: styles.css  tutor-styles.css
tutor-web-app-ssr/static/iter1/: index.html
tutor-web-app-ssr/static/iter2/: form.html  user.html
tutor-web-app-ssr/static/iter6/: course_list.html
tutor-web-service/: Cargo.toml
tutor-web-service/src/iter2/: handlers.rs
tutor-web-service/src/iter3/: db_access.rs
tutor-web-service/src/iter5/: errors.rs
tutor-web-service/src/iter5/dbscripts/: course.sql
tutor-web-service/src/iter5/handlers/: course.rs  tutor.rs
