[package]
name = "tutor-nodb"
version = "0.1.0"
edition = "2021"
default-run="tutor-service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "basic-server"

[[bin]]
name = "tutor-service"

[dependencies]
actix-web = "3.3.2" 
actix-rt = "1.1.1"
# actix-web = "4.2.1"
# actix-rt = "2.7.0"

# Data serialisation library
serde = { version = "1.0.147", features = ["derive"] }

# Other utilities
chrono = { version = "0.4.22", features = ["serde"] }


